<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PADC-3-F-HAN-MM-News</string>
    <string name="action_settings">Settings</string>

    <string name="dummy_news_details">မန်ချက်စတာယူနိုက်တက်အသင်းရဲ့နည်းပြ မော်ရင်ဟိုဟာ မနက်ဖြန်ည ၁၁ နာရီမှာ ယှဉ်ပြိုင်ကစားရတော့မယ့် မန်ချက်စတာဒါဘီပွဲစဉ်မတိုင်မီ စိတ်ဓာတ်စစ်ဆင်ရေးအနေနဲ့ နောက်ထပ်စကားစစ်ထိုးမှုတစ်ခု ထပ်မံပြုလုပ်ခဲ့တာဖြစ်ပါတယ်။ မန်ချက်စတာဒါဘီပွဲစဉ်အတွက် သတင်းစာရှင်းလင်းပွဲမှာ မန်ချက်စတာစီးတီးအသင်းရဲ့ကစားသမားတွေဟာ လေတိုက်ရင်တောင် လဲကျတတ်တဲ့သူတွေလို့ ပြောကြားလိုက်တာ ဖြစ်ပါတယ်။
မော်ရင်ဟိုဟာ မန်ချက်စတာစီးတီးအသင်းရဲ့တောင်ပံကစားသမား စတားလင်းကို အာဆင်နယ်အသင်းရဲ့နည်းပြ အာစင်ဝင်းဂါးက ဒိုင်ဗင်ထိုးကျွမ်းကျင်သူလို့ ပြောကြားခဲ့တဲ့စကားကို သဘောတူကြောင်း ပြသခဲ့တာဖြစ်သလို ကွင်းလယ်ကစားသမား ဘာနာဒိုဆေးလ်ဗား ဘန်လေအသင်းနဲ့ပွဲစဉ်မှာ ဂိုးသမား ပုပ်နဲ့ တွေ့ဆုုံချိန်မှာ ဟန်ဆောင်လှဲချခဲ့တာကိုလည်း ရည်ညွှန်းလိုတဲ့သဘောနဲ့ ပြောကြားခဲ့တာဖြစ်ပါတယ်။
"မန်စီးတီးနဲ့ပတ်သက်ပြီး ကျွန်တော်မကြိုက်တဲ့အချက်တစ်ချက်က ဘာလဲလို့ ခင်ဗျားတို့ မေးရင် သူတို့အသင်းရဲ့ကစားပုံက လွယ်လွယ်ကူကူနဲ့ ဟန်ချက်ပျက်သွားတာပါပဲ။ အဲဒါကြောင့််ပဲ ကြည့်ပါလား၊ ကွင်းထဲမှာ လေလေးနည်းနည်း တိုက်လိုက်တာနဲ့ သူတို့အသင်းက ကစားသမားတွေ ခဏခဏ လဲကျနေတာ"
"မန်စီးတီးနဲ့ပွဲစဉ်မှာ ကျွန်တော် ဘယ်လိုကစားကွွက်နဲ့ကစားမလဲဆိုတာ လူတိုင်း သိချင်နေကြမှာပါ။ ပရိသတ်တွေအနေနဲ့လည်း ဒီလိုမေးခွန်းမျိုးလေး မေးချင်နေမှာပါ။ ဘယ်သူတွေနဲ့ ပွဲထွက်ကစားမလဲ၊ ဘယ်လိုကစားကွက်ပုံစံမျိုးနဲ့ကစားမလဲ ဆိုတာပေါ့။ ကျွန်တော်ကတော့ မပြောပြနိုင်ဘူး"လို့ ပြောကြားခဲ့ပါတယ်။မန်ချက်စတာယူနိုက်တက်အသင်းရဲ့နည်းပြ မော်ရင်ဟိုဟာ မနက်ဖြန်ည ၁၁ နာရီမှာ ယှဉ်ပြိုင်ကစားရတော့မယ့် မန်ချက်စတာဒါဘီပွဲစဉ်မတိုင်မီ စိတ်ဓာတ်စစ်ဆင်ရေးအနေနဲ့ နောက်ထပ်စကားစစ်ထိုးမှုတစ်ခု ထပ်မံပြုလုပ်ခဲ့တာဖြစ်ပါတယ်။ မန်ချက်စတာဒါဘီပွဲစဉ်အတွက် သတင်းစာရှင်းလင်းပွဲမှာ မန်ချက်စတာစီးတီးအသင်းရဲ့ကစားသမားတွေဟာ လေတိုက်ရင်တောင် လဲကျတတ်တဲ့သူတွေလို့ ပြောကြားလိုက်တာ ဖြစ်ပါတယ်။
မော်ရင်ဟိုဟာ မန်ချက်စတာစီးတီးအသင်းရဲ့တောင်ပံကစားသမား စတားလင်းကို အာဆင်နယ်အသင်းရဲ့နည်းပြ အာစင်ဝင်းဂါးက ဒိုင်ဗင်ထိုးကျွမ်းကျင်သူလို့ ပြောကြားခဲ့တဲ့စကားကို သဘောတူကြောင်း ပြသခဲ့တာဖြစ်သလို ကွင်းလယ်ကစားသမား ဘာနာဒိုဆေးလ်ဗား ဘန်လေအသင်းနဲ့ပွဲစဉ်မှာ ဂိုးသမား ပုပ်နဲ့ တွေ့ဆုုံချိန်မှာ ဟန်ဆောင်လှဲချခဲ့တာကိုလည်း ရည်ညွှန်းလိုတဲ့သဘောနဲ့ ပြောကြားခဲ့တာဖြစ်ပါတယ်။
"မန်စီးတီးနဲ့ပတ်သက်ပြီး ကျွန်တော်မကြိုက်တဲ့အချက်တစ်ချက်က ဘာလဲလို့ ခင်ဗျားတို့ မေးရင် သူတို့အသင်းရဲ့ကစားပုံက လွယ်လွယ်ကူကူနဲ့ ဟန်ချက်ပျက်သွားတာပါပဲ။ အဲဒါကြောင့််ပဲ ကြည့်ပါလား၊ ကွင်းထဲမှာ လေလေးနည်းနည်း တိုက်လိုက်တာနဲ့ သူတို့အသင်းက ကစားသမားတွေ ခဏခဏ လဲကျနေတာ"
"မန်စီးတီးနဲ့ပွဲစဉ်မှာ ကျွန်တော် ဘယ်လိုကစားကွွက်နဲ့ကစားမလဲဆိုတာ လူတိုင်း သိချင်နေကြမှာပါ။ ပရိသတ်တွေအနေနဲ့လည်း ဒီလိုမေးခွန်းမျိုးလေး မေးချင်နေမှာပါ။ ဘယ်သူတွေနဲ့ ပွဲထွက်ကစားမလဲ၊ ဘယ်လိုကစားကွက်ပုံစံမျိုးနဲ့ကစားမလဲ ဆိုတာပေါ့။ ကျွန်တော်ကတော့ မပြောပြနိုင်ဘူး"လို့ ပြောကြားခဲ့ပါတယ်။မန်ချက်စတာယူနိုက်တက်အသင်းရဲ့နည်းပြ မော်ရင်ဟိုဟာ မနက်ဖြန်ည ၁၁ နာရီမှာ ယှဉ်ပြိုင်ကစားရတော့မယ့် မန်ချက်စတာဒါဘီပွဲစဉ်မတိုင်မီ စိတ်ဓာတ်စစ်ဆင်ရေးအနေနဲ့ နောက်ထပ်စကားစစ်ထိုးမှုတစ်ခု ထပ်မံပြုလုပ်ခဲ့တာဖြစ်ပါတယ်။ မန်ချက်စတာဒါဘီပွဲစဉ်အတွက် သတင်းစာရှင်းလင်းပွဲမှာ မန်ချက်စတာစီးတီးအသင်းရဲ့ကစားသမားတွေဟာ လေတိုက်ရင်တောင် လဲကျတတ်တဲ့သူတွေလို့ ပြောကြားလိုက်တာ ဖြစ်ပါတယ်။
မော်ရင်ဟိုဟာ မန်ချက်စတာစီးတီးအသင်းရဲ့တောင်ပံကစားသမား စတားလင်းကို အာဆင်နယ်အသင်းရဲ့နည်းပြ အာစင်ဝင်းဂါးက ဒိုင်ဗင်ထိုးကျွမ်းကျင်သူလို့ ပြောကြားခဲ့တဲ့စကားကို သဘောတူကြောင်း ပြသခဲ့တာဖြစ်သလို ကွင်းလယ်ကစားသမား ဘာနာဒိုဆေးလ်ဗား ဘန်လေအသင်းနဲ့ပွဲစဉ်မှာ ဂိုးသမား ပုပ်နဲ့ တွေ့ဆုုံချိန်မှာ ဟန်ဆောင်လှဲချခဲ့တာကိုလည်း ရည်ညွှန်းလိုတဲ့သဘောနဲ့ ပြောကြားခဲ့တာဖြစ်ပါတယ်။
"မန်စီးတီးနဲ့ပတ်သက်ပြီး ကျွန်တော်မကြိုက်တဲ့အချက်တစ်ချက်က ဘာလဲလို့ ခင်ဗျားတို့ မေးရင် သူတို့အသင်းရဲ့ကစားပုံက လွယ်လွယ်ကူကူနဲ့ ဟန်ချက်ပျက်သွားတာပါပဲ။ အဲဒါကြောင့််ပဲ ကြည့်ပါလား၊ ကွင်းထဲမှာ လေလေးနည်းနည်း တိုက်လိုက်တာနဲ့ သူတို့အသင်းက ကစားသမားတွေ ခဏခဏ လဲကျနေတာ"
"မန်စီးတီးနဲ့ပွဲစဉ်မှာ ကျွန်တော် ဘယ်လိုကစားကွွက်နဲ့ကစားမလဲဆိုတာ လူတိုင်း သိချင်နေကြမှာပါ။ ပရိသတ်တွေအနေနဲ့လည်း ဒီလိုမေးခွန်းမျိုးလေး မေးချင်နေမှာပါ။ ဘယ်သူတွေနဲ့ ပွဲထွက်ကစားမလဲ၊ ဘယ်လိုကစားကွက်ပုံစံမျိုးနဲ့ကစားမလဲ ဆိုတာပေါ့။ ကျွန်တော်ကတော့ မပြောပြနိုင်ဘူး"လို့ ပြောကြားခဲ့ပါတယ်။မန်ချက်စတာယူနိုက်တက်အသင်းရဲ့နည်းပြ မော်ရင်ဟိုဟာ မနက်ဖြန်ည ၁၁ နာရီမှာ ယှဉ်ပြိုင်ကစားရတော့မယ့် မန်ချက်စတာဒါဘီပွဲစဉ်မတိုင်မီ စိတ်ဓာတ်စစ်ဆင်ရေးအနေနဲ့ နောက်ထပ်စကားစစ်ထိုးမှုတစ်ခု ထပ်မံပြုလုပ်ခဲ့တာဖြစ်ပါတယ်။ မန်ချက်စတာဒါဘီပွဲစဉ်အတွက် သတင်းစာရှင်းလင်းပွဲမှာ မန်ချက်စတာစီးတီးအသင်းရဲ့ကစားသမားတွေဟာ လေတိုက်ရင်တောင် လဲကျတတ်တဲ့သူတွေလို့ ပြောကြားလိုက်တာ ဖြစ်ပါတယ်။
မော်ရင်ဟိုဟာ မန်ချက်စတာစီးတီးအသင်းရဲ့တောင်ပံကစားသမား စတားလင်းကို အာဆင်နယ်အသင်းရဲ့နည်းပြ အာစင်ဝင်းဂါးက ဒိုင်ဗင်ထိုးကျွမ်းကျင်သူလို့ ပြောကြားခဲ့တဲ့စကားကို သဘောတူကြောင်း ပြသခဲ့တာဖြစ်သလို ကွင်းလယ်ကစားသမား ဘာနာဒိုဆေးလ်ဗား ဘန်လေအသင်းနဲ့ပွဲစဉ်မှာ ဂိုးသမား ပုပ်နဲ့ တွေ့ဆုုံချိန်မှာ ဟန်ဆောင်လှဲချခဲ့တာကိုလည်း ရည်ညွှန်းလိုတဲ့သဘောနဲ့ ပြောကြားခဲ့တာဖြစ်ပါတယ်။
"မန်စီးတီးနဲ့ပတ်သက်ပြီး ကျွန်တော်မကြိုက်တဲ့အချက်တစ်ချက်က ဘာလဲလို့ ခင်ဗျားတို့ မေးရင် သူတို့အသင်းရဲ့ကစားပုံက လွယ်လွယ်ကူကူနဲ့ ဟန်ချက်ပျက်သွားတာပါပဲ။ အဲဒါကြောင့််ပဲ ကြည့်ပါလား၊ ကွင်းထဲမှာ လေလေးနည်းနည်း တိုက်လိုက်တာနဲ့ သူတို့အသင်းက ကစားသမားတွေ ခဏခဏ လဲကျနေတာ"
"မန်စီးတီးနဲ့ပွဲစဉ်မှာ ကျွန်တော် ဘယ်လိုကစားကွွက်နဲ့ကစားမလဲဆိုတာ လူတိုင်း သိချင်နေကြမှာပါ။ ပရိသတ်တွေအနေနဲ့လည်း ဒီလိုမေးခွန်းမျိုးလေး မေးချင်နေမှာပါ။ ဘယ်သူတွေနဲ့ ပွဲထွက်ကစားမလဲ၊ ဘယ်လိုကစားကွက်ပုံစံမျိုးနဲ့ကစားမလဲ ဆိုတာပေါ့။ ကျွန်တော်ကတော့ မပြောပြနိုင်ဘူး"လို့ ပြောကြားခဲ့ပါတယ်။</string>

    <string name="title_news_by_category">News By Category</string>

    <string name="top_news">Arda Turan in talks to join Istanbul Basaksehir from Barcelona</string>
    <string name="sports_news_1">Schalke secure Hoffenheim striker Uth</string>
    <string name="sports_news_2">Stroke City capture Austria defender from Rubin Kazan</string>
    <string name="sports_news_3">Coutinho to Barca, our new host and more! > One- Two:Episode11</string>
    <string name="sports_news_4">Tottenham winger N\'Koudou joins Burnley on loan</string>

    <!--international news-->
    <string name="top_news_title"><font style="color:#98acca">Daca must stay</font> / Judge blocks Trump move to end program for immigrants</string>
    <string name="top_news_content">\'I\'ll take  the heart / Trumps touts \'bill of love\' for Dreamers</string>
    <string name="brief_one">Buffet on Bitcoin / Cryptocurrencies \'will come to a bad end\',says billionaire investor</string>
    <string name="brief_two">California mudslide / At least a dozen killed after rains pound Santa Barbara</string>
    <string name="inter_news_1">Trump-Russia / Transcript raises questions about FBI's handling of concerns</string>
    <string name="inter_news_2">Exclusive / US to loosen nuclear weapons policy, raising fears of nuclear war</string>
    <string name="inter_news_3">James Franco / Actor denies sexual misconduct claims in Colbert interview</string>
    <string name="inter_news_4">Catherine Deneuve / Claim of #MeToo witch-hunt sparks backlash</string>

    <string name="menu_item_all_news">All News</string>
    <string name="menu_item_news_by_category">News By Category</string>
    
    <string name="all_news">All News</string>

    <string name="before_login_btnlogin_text">LOGIN ၀င်ရန်</string>
    <string name="before_login_btnregister_text">REGISTER ပြုလုပ်ရန်</string>

    <string name="btn_forgot_password"><i><u>Password မေ့သွားလို့</u></i></string>
    <string name="btn_to_register"><i><u>New User ? Register</u></i></string>
    <string name="lbl_navigate_to_login"><u><i>Already have account ?</i></u></string>
    <string name="hint_enter_phone">Your Phone Number</string>
    <string name="hint_enter_email">Your Email</string>
    <string name="hint_enter_password">Password</string>
    <string name="lbl_mark_my_home_on_google_map"><u><i>Mark my home on Google Map</i></u></string>

    <string name="btn_logout">Logout</string>
    <string name="msg_generic_no_data">လက်ရှိ data ပြစရာ မရှိသေးပါ</string>
    <string name="lbl_refresh">Data ပြန်လုပ်လုပ်ရန်</string>

    <string name="msg_to_exit"><b><xliff:g id="name">%1$s</xliff:g></b>, Are you sure to exit MM-News</string>

    <string name="format_like_users"><xliff:g id="no_of_likes">%1$d</xliff:g> Likes</string>
    <string name="format_comment_users"> - <xliff:g id="no_of_comment">%1$d</xliff:g> Comments</string>
    <string name="format_sent_tos_users"> - <xliff:g id="no_of_sent_tos">%1$d</xliff:g> Sent Tos</string>
    <string name="btn_add_comment">Add Comment</string>
</resources>
