<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/divider">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="headlines"
            android:textColor="@color/dark_blue"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_category"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_access_time_24dp"
            android:drawablePadding="4dp"
            android:text="11:28 PM" />

        <View
            android:id="@+id/v_top_news"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/tv_category"
            android:layout_alignRight="@id/tv_time"
            android:layout_below="@id/tv_category"
            android:layout_marginTop="16dp"
            android:background="@color/primary" />

        <RelativeLayout
            android:id="@+id/rl_top_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_category"
            android:layout_alignRight="@id/tv_time"
            android:layout_below="@id/v_top_news"
            android:background="@color/white_full">

            <TextView
                android:id="@+id/tv_top_news_title_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/top_news_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_top_news_posted_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_top_news_title_tag"
                android:layout_below="@id/tv_top_news_title_tag"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_access_time_24dp"
                android:drawablePadding="4dp"
                android:text="60m" />

            <ImageView
                android:id="@+id/iv_top_news_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/tv_top_news_posted_time"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/inter_top_news" />

            <View
                android:id="@+id/v_top_news_img_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/iv_top_news_image"
                android:background="@color/primary" />

            <TextView
                android:id="@+id/tv_top_news_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_top_news_title_tag"
                android:layout_below="@id/v_top_news_img_divider"
                android:textSize="16sp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/top_news_content" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_brief_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/tv_category"
            android:layout_alignRight="@id/tv_time"
            android:layout_below="@id/rl_top_news"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/rl_brief_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:background="@color/white_full">

                <View
                    android:id="@+id/v_brief_one"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/primary" />

                <TextView
                    android:id="@+id/tv_brief_one_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v_brief_one"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/brief_one"
                    android:textSize="16sp"
                    android:lines="5"/>

                <TextView
                    android:id="@+id/tv_brief_one_posted_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_brief_one_title"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:drawableLeft="@drawable/ic_access_time_24dp"
                    android:drawablePadding="4dp"
                    android:text="1h" />

                <ImageView
                    android:id="@+id/iv_brief_one"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/tv_brief_one_posted_time"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/brief_one" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_brief_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:background="@color/white_full">

                <View
                    android:id="@+id/v_brief_two"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/primary" />

                <TextView
                    android:id="@+id/tv_brief_two_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v_brief_two"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/brief_two"
                    android:textSize="16sp"
                    android:lines="5"/>

                <TextView
                    android:id="@+id/tv_brief_two_posted_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_brief_two_title"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:drawableLeft="@drawable/ic_access_time_24dp"
                    android:drawablePadding="4dp"
                    android:text="6h" />

                <ImageView
                    android:id="@+id/iv_brief_two"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/tv_brief_two_posted_time"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/brief_two" />
            </RelativeLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_inter_news_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_category"
            android:layout_alignRight="@id/tv_time"
            android:layout_below="@id/ll_brief_news"
            android:layout_marginTop="16dp"
            android:background="@color/white_full">

            <View
                android:id="@+id/v_inter_news_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />

            <TextView
                android:id="@+id/tv_inter_news_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inter_news_1"
                android:textSize="16sp"
                android:padding="8dp"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_inter_news_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_category"
            android:layout_alignRight="@id/tv_time"
            android:layout_below="@id/fl_inter_news_1"
            android:layout_marginTop="16dp"
            android:background="@color/white_full">

            <View
                android:id="@+id/v_inter_news_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />

            <TextView
                android:id="@+id/tv_inter_news_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inter_news_2"
                android:textSize="16sp"
                android:padding="8dp"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_inter_news_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_category"
            android:layout_alignRight="@id/tv_time"
            android:layout_below="@id/fl_inter_news_2"
            android:layout_marginTop="16dp"
            android:background="@color/white_full">

            <View
                android:id="@+id/v_inter_news_3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />

            <TextView
                android:id="@+id/tv_inter_news_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inter_news_3"
                android:textSize="16sp"
                android:padding="8dp"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_inter_news_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_category"
            android:layout_alignRight="@id/tv_time"
            android:layout_below="@id/fl_inter_news_3"
            android:layout_marginTop="16dp"
            android:background="@color/white_full">

            <View
                android:id="@+id/v_inter_news_4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />

            <TextView
                android:id="@+id/tv_inter_news_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inter_news_4"
                android:textSize="16sp"
                android:padding="8dp"
                />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View More"
            android:layout_below="@id/fl_inter_news_4"
            android:layout_marginTop="24dp"
            android:layout_alignRight="@id/tv_time"
            android:textStyle="bold"
            android:textSize="21dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_24dp"
            android:drawablePadding="4dp"
            android:textColor="@color/dark_blue"
            />

        <View
            android:id="@+id/v_last_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_view_more"
            android:layout_marginTop="36dp"
            android:layout_alignLeft="@id/tv_category"
            android:layout_alignRight="@id/tv_time"
            android:background="@color/primary" />

    </RelativeLayout>

</android.support.v7.widget.CardView>